--- a/templates/events/home.html
+++ b/templates/events/home.html
@@ -75,8 +75,8 @@
                         <h6>Meta</h6>
                     </div>
                     <div>
-                        <h5 id="dias"></h5>
-                        <h6>Fecha límite</h6>
+                        <h5 id="Days">{{event.end_date}}</h5>
+                        <h6>Fecha del evento</h6>
                     </div>
                 </div>
             </div>
