--- a/static/css/home.css
+++ b/static/css/home.css
@@ -102,6 +102,11 @@ header article button {
 }
 .line div h5 {
     font-weight:bold;
+    text-align: right;
+    font-size: 10px;
+}
+.line div h6 {
+    text-align: right;
 }
 #bestparties{
     background-color: #C4D1FE;
