--- a/templates/events/home.html
+++ b/templates/events/home.html
@@ -57,8 +57,8 @@
                     <h5>{{event.location_name}} {{event.location_city}}</h5>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                        aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="7"
+                        aria-valuemin="0" aria-valuemax="100" style="width: 10%">
                         <span class="sr-only">{{event.progress}}</span>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
             {% for top_score in top_scores %}
             <article>
                 <figure>
-                    <img src={{ event.photo }} alt="">
+                    <img src="{{ top_score.photo }}" alt="">
                 </figure>
                 <div class="centro">
                     <h4>{{top_score.name}}</h4>
