--- a/templates/events/successful_event.html
+++ b/templates/events/successful_event.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Create Event{% endblock %}
+{% block title %}Eventos pasados{% endblock %}
 
 {% block body %}
 {%for detail in events%}
