trabajando en imagen rota de eventos creados

--- a/templates/events/successful_event.html
+++ b/templates/events/successful_event.html
@@ -7,7 +7,7 @@
 <section>
 	<h1>{{detail.name}}</h1>
 	<figure>
-		<img src="{{detail.event_image}}">
+		<img src="{{detail.event_image.url}}">
 	</figure>
 	<p>fiesta de la fecha {{detail.start_date}} a la fecha {{detail.end_date}}</p>
 	<p>Lo recaudado fue ${{detail.goal}}</p>
