arregle links en header para crear eventos. faltan login/register

--- a/templates/events/home.html
+++ b/templates/events/home.html
@@ -24,20 +24,20 @@
         <nav>
             <ul class="container">
                 <li>
-                    <a href="">Crea tu evento </a> |
+                    <a href="/crear_evento">Crea tu evento </a> |
                 </li>
                 <li>
-                    <a href=""> Regístrate </a> |
+                    <a href="/users"> Regístrate </a> |
                 </li>
                 <li>
-                    <a href=""> Iniciar sesión</a>
+                    <a href="/users"> Iniciar sesión</a>
                 </li>
             </ul>
         </nav>
         <article class="container">
             <h3>Busca tu evento, dona, participa</h3>
-            <button type="button">"Busca un evento"</button>
-            <button type="button">"Crea un evento"</button>
+            <button onclick="location.href = '/successful_event';" type="button">"Busca un evento"</button>
+            <button onclick="location.href = '/crear_evento';" type="button">"Crea tu evento"</button>
             </form>
         </article>
     </header>
