links de crear ya funcionan en todos los headers

--- a/templates/events/successful_event.html
+++ b/templates/events/successful_event.html
@@ -15,13 +15,13 @@
 		<nav>
             <ul class="container">
                 <li>
-                    <a href="">Crea tu evento </a> |
+                    <a href="/crear_evento">Crea tu evento </a> |
                 </li>
                 <li>
-                    <a href=""> Regístrate </a> |
+                    <a href="/users"> Regístrate </a> |
                 </li>
                 <li>
-                    <a href=""> Iniciar sesión</a>
+                    <a href="/users"> Iniciar sesión</a>
                 </li>
             </ul>
         </nav>
