--- a/templates/events/fund.html
+++ b/templates/events/fund.html
@@ -1,4 +1,16 @@
-<!DOCTYPE html>
+  {% extends "base.html" %}
+  {% block title %}Event{% endblock %}
+  {% load static from staticfiles %}
+  {% block stylesheet %}
+
+  <link rel="stylesheet" type="text/css" href="{% static "css/estilos.css" %}">
+  
+{% endblock stylesheet %}
+
+
+
+  {% block body %}
+
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
@@ -53,3 +65,4 @@
     </div>
   </body>
 </html>
+{% endblock %}
