ultimo commit. meti los links y los tags para los pasos del evento. No hay logica para pagos y no muestra los code tags en confirmar ni lleva a ningun lado pero ya hice todo lo que voy a hacer

--- a/templates/events/confirm.html
+++ b/templates/events/confirm.html
@@ -20,7 +20,7 @@
     <div id="wrap">
       <h1>​Inversión:</h1>
       <section>
-        <div class="col-2 text-left"><img src="img/game.jpg" alt=""/></div>
+        <div class="col-2 text-left"><img src="{{ event.photo }}" alt=""/></div>
         <div class="col-2 text-left">
           <p>¡Gracias estamos a 1000 créditos más cerca de nuestra fiesta!</p>
           <p>¡Te mandaremos una TShirt de la fiesta!</p><span class="juntadoText">Ha juntado:</span><span class="juntadoCount">49,160 Créditos</span><span class="juntadoText-col"> 
